--- a/front_end/package.json
+++ b/front_end/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
-    "@pinia/nuxt": "^0.11.3"
+    "@pinia/nuxt": "^0.11.3",
+    "daisyui": "^5.5.14"
   }
 }
