--- a/front_end/package.json
+++ b/front_end/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.981.0",
     "@nuxtjs/supabase": "^2.0.3",
     "nuxt": "^4.2.2",
     "vue": "^3.5.26",
